K1J-422: ActionRuleProtectedPerson should consider allowed roles whenevaluating. CertificateActionSpecification includes default roles and certificate types can decide to override those roles. (#340)