@@ -13,7 +13,6 @@ import static se.inera.intyg.certificateservice.application.testdata.TestDataCom
 import static se.inera.intyg.certificateservice.application.testdata.TestDataCommonUnitDTO.ALFA_HUDMOTTAGNINGEN_DTO;
 import static se.inera.intyg.certificateservice.application.testdata.TestDataCommonUnitDTO.ALFA_MEDICINCENTRUM_DTO;
 import static se.inera.intyg.certificateservice.application.testdata.TestDataCommonUserDTO.AJLA_DOCTOR_DTO;
-import static se.inera.intyg.certificateservice.application.testdata.TestDataCommonUserDTO.ALVA_VARDADMINISTRATOR_DTO;
 import static se.inera.intyg.certificateservice.application.testdata.TestDataCommonUserDTO.BERTIL_BARNMORSKA_DTO;
 import static se.inera.intyg.certificateservice.application.testdata.TestDataCommonUserDTO.ajlaDoktorDtoBuilder;
 import static se.inera.intyg.certificateservice.application.testdata.TestDataIncomingMessage.incomingComplementDTOBuilder;
@@ -35,10 +34,13 @@ import java.util.List;
 import java.util.Objects;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import se.inera.intyg.certificateservice.application.certificate.dto.PersonIdDTO;
 import se.inera.intyg.certificateservice.application.common.dto.PersonIdTypeDTO;
 import se.inera.intyg.certificateservice.application.common.dto.ResourceLinkDTO;
 import se.inera.intyg.certificateservice.application.common.dto.ResourceLinkTypeDTO;
+import se.inera.intyg.certificateservice.application.common.dto.UserDTO;
 import se.inera.intyg.certificateservice.application.unit.dto.MessagesQueryCriteriaDTO;
 import se.inera.intyg.certificateservice.application.unit.dto.QuestionSenderTypeDTO;
 import se.inera.intyg.certificateservice.integrationtest.util.CertificateUtil;
@@ -656,9 +658,10 @@ public abstract class MessagesIT extends BaseIntegrationIT {
   }
 
 
-  @Test
-  @DisplayName("Vårdadministratör - Om intyget är utfärdat på en patient som har skyddade personuppgifter ska inte hantering av frågor vara tillgänglig")
-  void shallReturn403IfPatientIsProtectedPersonAndUserIsCareAdmin() {
+  @ParameterizedTest
+  @DisplayName("Om intyget är utfärdat på en patient som har skyddade personuppgifter skall felkod 403 (FORBIDDEN) returneras")
+  @MethodSource("rolesNoAccessToProtectedPerson")
+  void shallReturn403IfPatientIsProtectedPerson(UserDTO userDTO) {
     final var testCertificates = testabilityApi.addCertificates(
         customTestabilityCertificateRequest(type(), typeVersion(), SIGNED)
             .patient(ANONYMA_REACT_ATTILA_DTO)
@@ -682,7 +685,7 @@ public abstract class MessagesIT extends BaseIntegrationIT {
 
     final var messagesForCertificate = api.getMessagesForCertificate(
         customGetCertificateMessageRequest()
-            .user(ALVA_VARDADMINISTRATOR_DTO)
+            .user(userDTO)
             .build(),
         certificateId(testCertificates)
     );
@@ -762,7 +765,7 @@ public abstract class MessagesIT extends BaseIntegrationIT {
     );
 
     assertTrue(
-        questions(messagesForCertificate.getBody()).get(0).getLinks()
+        questions(messagesForCertificate.getBody()).getFirst().getLinks()
             .isEmpty(),
         "Should not return link!"
     );
